update: только chrome.runtime.message, port не используем, ловим ошибку в промисе, потому что окну popup посылваем данные всегда, чтоб "на лету" обновлять

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -13,11 +13,16 @@
             padding: 1rem;
             width: 15rem;
         }
+        
+        p{
+            text-align: center;
+        }
 
         .btn {
             width: 100%;
             padding: 0.5rem;
             font-size: 1rem;
+            border-radius: 0.5rem;
         }
 
         .reset-btn {
@@ -65,8 +70,9 @@
 </head>
 
 <body>
-    <p>Очищает ленту ВК от рекламы и тупых комментов</p>
+    <p>Очищает ленту ВК от рекламы и тупых комментов.</p>
     <button id="toggle-btn" class="btn btn__disabled">Error :( </button>
+    <p>После изменения состояния - перезагрузите ленту.</p>
     <div class="ads-removed-block">
         <div class="ads-removed">
             <div class="ads-removed-column">ads posts removed:</div>
